--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -4,5 +4,7 @@
 @import './helpers/reboot';
 
 @import './custom/custom';
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css'); // Import Bootstrap icon
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap'); // Import Google fonts
+@import '~swiper/swiper.scss'; // Import Swiper styles
+@import '~swiper/components/navigation/navigation'; // Import Swiper navigation styles
