--- a/src/assets/stylesheets/custom/components/_list.scss
+++ b/src/assets/stylesheets/custom/components/_list.scss
@@ -1,14 +1,43 @@
 .list-item {
-  max-height: 400px;
-  padding: 237px 30px 80px 30px;
-  color: $white;
+  position: relative;
+  color: $light;
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 10%,
+    rgba(70, 70, 70, 0.1) 20%,
+    rgba(70, 70, 70, 0.1) 30%,
+    rgba(50, 50, 50, 0.2) 40%,
+    rgba(20, 20, 20, 0.2) 50%,
+    rgba(10, 10, 10, 0.3) 60%,
+    rgba(0, 0, 0, 0.3) 70%,
+    rgba(20, 20, 20, 0.3) 80%,
+    rgba(20, 20, 20, 0.4) 90%,
+    rgba(20, 20, 20, 0.5) 100%
+  );
+  &-inner {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    padding-left: 1.25rem;
+    padding-right: 4rem;
+    padding-bottom: 4rem;
+  }
+  &-img {
+    width: 100%;
+    height: 400px;
+    mix-blend-mode: overlay;
+  }
   &-title {
     font-size: 2rem;
+    font-weight: bold;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid $white;
   }
   &-subtitle {
-    font-size: 1rem;
+    font-size: 1.25rem;
+    font-weight: bold;
   }
 }
