--- a/src/assets/stylesheets/custom/components/_list.scss
+++ b/src/assets/stylesheets/custom/components/_list.scss
@@ -1,33 +1,55 @@
 .list-item {
   position: relative;
-  color: $light;
-  background-image: linear-gradient(
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 10%,
-    rgba(70, 70, 70, 0.1) 20%,
-    rgba(70, 70, 70, 0.1) 30%,
-    rgba(50, 50, 50, 0.2) 40%,
-    rgba(20, 20, 20, 0.2) 50%,
-    rgba(10, 10, 10, 0.3) 60%,
-    rgba(0, 0, 0, 0.3) 70%,
-    rgba(20, 20, 20, 0.3) 80%,
-    rgba(20, 20, 20, 0.4) 90%,
-    rgba(20, 20, 20, 0.5) 100%
-  );
+  color: $white;
+  overflow: hidden;
+  > a:hover {
+    color: $white;
+  }
+  &-img {
+    width: 100%;
+    height: 400px;
+    mix-blend-mode: overlay;
+    z-index: 0;
+    -webkit-filter: blur(1.2px);
+    filter: blur(1.2px);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+    transition: opacity 0.3s, transform 0.3s;
+    &-outer {
+      // transition 時圖片才不會超出 border-radius
+      position: relative;
+      z-index: 1;
+      background-image: linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 10%,
+        rgba(70, 70, 70, 0.1) 20%,
+        rgba(50, 50, 50, 0.2) 30%,
+        rgba(0, 0, 0, 0.2) 40%,
+        rgba(0, 0, 0, 0.3) 50%,
+        rgba(0, 0, 0, 0.3) 60%,
+        rgba(0, 0, 0, 0.4) 70%,
+        rgba(0, 0, 0, 0.4) 80%,
+        rgba(0, 0, 0, 0.5) 90%,
+        rgba(0, 0, 0, 0.6) 100%
+      );
+    }
+    &:hover {
+      opacity: 1;
+      -webkit-transform: scale(1.2);
+      transform: scale(1.2);
+    }
+  }
   &-inner {
     width: 100%;
     position: absolute;
+    z-index: 2;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
     padding-left: 1.25rem;
     padding-right: 4rem;
     padding-bottom: 4rem;
-  }
-  &-img {
-    width: 100%;
-    height: 400px;
-    mix-blend-mode: overlay;
   }
   &-title {
     font-size: 2rem;
