修正pagination css、product list css、新增後台文章頁雛形

--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -5,6 +5,7 @@
 
 @import '~swiper/swiper.scss'; // Import Swiper styles
 @import '~swiper/components/navigation/navigation'; // Import Swiper navigation styles
+@import '~vue-slider-component/theme/default';
 
 @import './custom/custom';
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css'); // Import Bootstrap icon
