--- a/src/assets/stylesheets/custom/components/_tag.scss
+++ b/src/assets/stylesheets/custom/components/_tag.scss
@@ -1,13 +1,28 @@
 .tag {
+  display: inline-block;
+  padding: 0.5rem 0.25rem;
+  border: 0;
+  border-radius: 1rem;
+  font-size: 0.75rem;
+  cursor: pointer;
   &-sm {
     padding: 0.25rem;
     border: 0;
     border-radius: 0.25rem;
   }
-  &-warning {
-    background: $warning;
+  &-outline-secondary {
+    border: 1px solid $secondary;
+    color: $secondary;
     &:hover {
-      opacity: 0.8;
+      background: $secondary;
+      color: $white;
     }
   }
+  &-warning {
+    background: $warning;
+  }
+}
+.tag:hover,
+.tag-sm:hover {
+  opacity: 0.8;
 }
