--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -381,7 +381,7 @@ $border-widths: (
     4: 3px,
   // 4px,
     5: 4px,
-  // 5px,,,,,,,,,
+  // 5px,,,,,,,,,,,,,,,,,,,
 ) !default;
 
 $border-color: $gray-300 !default;
@@ -1063,14 +1063,14 @@ $dropdown-dark-header-color: $gray-500 !default;
 // Pagination
 
 // scss-docs-start pagination-variables
-$pagination-padding-y: 0.375rem !default;
-$pagination-padding-x: 0.75rem !default;
+$pagination-padding-y: 0.5rem; // 0.375rem !default;
+$pagination-padding-x: 0.95rem; // 0.75rem !default;
 $pagination-padding-y-sm: 0.25rem !default;
 $pagination-padding-x-sm: 0.5rem !default;
 $pagination-padding-y-lg: 0.75rem !default;
 $pagination-padding-x-lg: 1.5rem !default;
 
-$pagination-color: $link-color !default;
+$pagination-color: $black; // $link-color !default;
 $pagination-bg: $white !default;
 $pagination-border-width: $border-width !default;
 $pagination-border-radius: $border-radius !default;
@@ -1079,15 +1079,15 @@ $pagination-border-color: $gray-300 !default;
 
 $pagination-focus-color: $link-hover-color !default;
 $pagination-focus-bg: $gray-200 !default;
-$pagination-focus-box-shadow: $input-btn-focus-box-shadow !default;
+$pagination-focus-box-shadow: none; // $input-btn-focus-box-shadow !default;
 $pagination-focus-outline: 0 !default;
 
-$pagination-hover-color: $link-hover-color !default;
+$pagination-hover-color: $secondary; // $link-hover-color !default;
 $pagination-hover-bg: $gray-200 !default;
-$pagination-hover-border-color: $gray-300 !default;
+$pagination-hover-border-color: transparent; // $gray-300 !default;
 
 $pagination-active-color: $component-active-color !default;
-$pagination-active-bg: $component-active-bg !default;
+$pagination-active-bg: $secondary; // $component-active-bg !default;
 $pagination-active-border-color: $pagination-active-bg !default;
 
 $pagination-disabled-color: $gray-600 !default;
