補 npm run build

--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -381,7 +381,7 @@ $border-widths: (
     4: 3px,
   // 4px,
     5: 4px,
-  // 5px,,,,,,,,,,,,,,,,,,,
+  // 5px,,,,,,,,,,,,,,,,,,,,,,
 ) !default;
 
 $border-color: $gray-300 !default;
@@ -1071,7 +1071,7 @@ $pagination-padding-y-lg: 0.75rem !default;
 $pagination-padding-x-lg: 1.5rem !default;
 
 $pagination-color: $black; // $link-color !default;
-$pagination-bg: $white !default;
+$pagination-bg: transparent; // $white !default;
 $pagination-border-width: $border-width !default;
 $pagination-border-radius: $border-radius !default;
 $pagination-margin-start: -$pagination-border-width !default;
@@ -1090,8 +1090,8 @@ $pagination-active-color: $component-active-color !default;
 $pagination-active-bg: $secondary; // $component-active-bg !default;
 $pagination-active-border-color: $pagination-active-bg !default;
 
-$pagination-disabled-color: $gray-600 !default;
-$pagination-disabled-bg: $white !default;
+$pagination-disabled-color: $gray-dark !default;
+$pagination-disabled-bg: transparent; // $white !default;
 $pagination-disabled-border-color: $gray-300 !default;
 
 $pagination-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
