調整前台產品列表頁：新增 tag 區、補行程長度 select 選項、讓產品顯示最低價及對應單位

--- a/src/assets/stylesheets/custom/components/_searchBox.scss
+++ b/src/assets/stylesheets/custom/components/_searchBox.scss
@@ -9,7 +9,7 @@
   }
   &-body {
     background: $white;
-    padding: 24px;
+    padding: 2rem 1.5rem;
     > input,
     > select {
       display: block;
