--- a/src/assets/stylesheets/custom/components/_tab.scss
+++ b/src/assets/stylesheets/custom/components/_tab.scss
@@ -4,8 +4,12 @@
   align-items: center;
   &-img {
     border-radius: 1rem;
-    width: 124px;
-    height: 124px;
+    width: 80px;
+    height: 80px;
+    @include media-breakpoint-up(lg) {
+      width: 124px;
+      height: 124px;
+    }
   }
   &-title {
     margin-left: 1rem;
