--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -28,23 +28,91 @@
   font-size: 2.5rem;
 }
 
+// .banner {
+//   height: 360px;
+//   background: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true);
+//   background-image: -webkit-cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true), 20%); // 讓背景透明但上面的字不影響
+//   background-image: cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true), 20%); // 讓背景透明但上面的字不影響
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-position: center;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   @include media-breakpoint-up(md) {
+//     height: 420px;
+//   }
+//   @include media-breakpoint-up(lg) {
+//     height: 548px;
+//   }
+// }
+
 .banner {
+  position: relative;
   height: 360px;
-  background: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true);
-  background-image: -webkit-cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true), 20%); // 讓背景透明但上面的字不影響
-  background-image: cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner.png?raw=true), 20%); // 讓背景透明但上面的字不影響
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF1.png?raw=true);
   @include media-breakpoint-up(md) {
     height: 420px;
   }
   @include media-breakpoint-up(lg) {
-    height: 548px;
+    height: 700px;
+  }
+}
+.city-tour-banner-btn,
+.tkt-banner-btn,
+.rent-cart-banner-btn {
+  position: absolute;
+  height: 300px;
+  background-size: cover;
+  &-title {
+    position: absolute;
+    font-size: 2rem;
+    font-weight: bold;
+    color: $light;
+    background: $primary;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0.5rem;
+  }
+}
+.city-tour-banner-btn,
+.rent-cart-banner-btn {
+  width: 350px;
+}
+.city-tour-banner-btn {
+  top: 180px;
+  left: 30px;
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E5%9F%8E%E5%B8%82%E5%B0%8E%E8%A6%BDicon.png?raw=true);
+  &-title {
+    bottom: -40px;
+    left: 30%;
+    transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+  }
+}
+.tkt-banner-btn {
+  width: 300px;
+  top: 30px;
+  left: 580px;
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E7%A5%A8%E5%88%B8%E9%AB%94%E9%A9%97%20icon.png?raw=true);
+  &-title {
+    top: 300px;
+    transform: rotate(5deg);
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+  }
+}
+.rent-cart-banner-btn {
+  top: 170px;
+  right: 30px;
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E5%8C%85%E8%BB%8A%E6%9C%8D%E5%8B%99%20icon.png?raw=true);
+  &-title {
+    bottom: -20px;
+    right: -15px;
+    transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
   }
 }
 
