--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -20,6 +20,11 @@
 @import './page/index';
 @import './page/cart';
 
+.bg-fish {
+  background-image: url('https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF2.png?raw=true');
+  background-repeat: repeat;
+}
+
 .to-top-btn {
   position: fixed;
   z-index: $zindex-tooltip;
