--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -20,7 +20,7 @@
 @import './page/index';
 @import './page/cart';
 
-.bg-fish {
+.bg-wave {
   background-image: url('https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF2.png?raw=true');
   background-repeat: repeat;
 }
@@ -57,6 +57,33 @@
       top: 23px;
       font-size: 1.25rem;
     }
+  }
+}
+
+.cable-car {
+  position: absolute;
+  left: 90%;
+  bottom: -40px;
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/cable-car.png?raw=true);
+  background-size: contain;
+  background-position: center;
+  width: 50px;
+  height: 50px;
+  animation-name: cable-car;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+}
+@keyframes cable-car {
+  0% {
+    left: 90%;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    left: 0;
+    opacity: 0;
   }
 }
 
