--- a/src/assets/stylesheets/custom/components/_card.scss
+++ b/src/assets/stylesheets/custom/components/_card.scss
@@ -8,11 +8,10 @@
     flex-direction: row;
     height: auto;
     border: 0.5px solid transparent;
-    border-radius: 0;
-
+    border-radius: 0.5rem;
     &-img {
       width: 25%;
-      border-radius: 0;
+      border-radius: 0.5rem 0 0 0.5rem;
       object-fit: cover;
       @include media-breakpoint-up(sm) {
         width: 33%;
@@ -63,7 +62,10 @@
     }
   }
   &-subtitle {
-    font-size: 1rem;
+    font-size: 0.75rem;
+    @include media-breakpoint-up(sm) {
+      font-size: 1rem;
+    }
     @include media-breakpoint-up(md) {
       font-size: 1.25rem;
     }
