第一次批改：增加產品頁空隙、修正圖片輪播的 Lightbox 不能切換的問題

--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -5,6 +5,8 @@
 
 @import '~swiper/swiper.scss'; // Import Swiper styles
 @import '~swiper/components/navigation/navigation'; // Import Swiper navigation styles
+@import 'swiper/components/thumbs/thumbs';
+
 @import '~vue-slider-component/theme/default';
 
 @import './custom/custom';
