調整購物車新增旅客樣式、解決不同價位套用優惠碼時價格計算錯誤問題

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -3,6 +3,7 @@
 @import './utils/font-size';
 @import './utils/objectFit';
 @import './utils/opacity';
+@import './utils/sizing';
 @import './utils/z-index';
 
 @import './components/alert';
