--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -53,9 +53,64 @@
   }
 }
 
+.step {
+  &-list {
+    position: absolute;
+    top: 129px;
+    left: 50%;
+    transform: translate(-50%);
+    @include media-breakpoint-up(md) {
+      top: 119px;
+    }
+    @include media-breakpoint-up(lg) {
+      top: 114px;
+    }
+  }
+  &-item {
+    width: 80px;
+    height: 40px;
+    background: $light;
+    border: 1px dotted $primary;
+    position: relative;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom: 0;
+    @include media-breakpoint-up(md) {
+      width: 100px;
+      height: 50px;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 50px;
+    }
+    @include media-breakpoint-up(lg) {
+      width: 110px;
+      height: 55px;
+      border-top-left-radius: 55px;
+      border-top-right-radius: 55px;
+    }
+  }
+  &-icon {
+    position: absolute;
+    top: -18px;
+    left: 54%;
+    transform: translate(-50%);
+  }
+  &-text {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%);
+    font-weight: bold;
+    color: $gray;
+  }
+}
+
 .delete-cart-icon {
   position: absolute;
   bottom: 10px;
   right: 10px;
   color: $black;
+  opacity: 0.1;
+  &:hover {
+    opacity: 0.9;
+  }
 }
