第一次修改：修正「已加入優惠碼，再加新商品，新商品不會有 coupon 套用」、調整購物車 RWD

--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -106,11 +106,15 @@
 
 .delete-cart-icon {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 2px;
+  right: 2px;
   color: $black;
   opacity: 0.1;
   &:hover {
     opacity: 0.9;
+  }
+  @include media-breakpoint-up(sm) {
+    bottom: 10px;
+    right: 10px;
   }
 }
