第一次修改：新增手機版現在購買按鈕、移除手機版回到上方按鈕、調整首頁靈感及產品和文章頁的圖片圓角為 rounded-2

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -223,3 +223,15 @@
   border-bottom-right-radius: 370px 300px;
   transform: rotate(-10deg);
 }
+
+.buy-now-btn {
+  position: fixed;
+  z-index: $zindex-offcanvas;
+  bottom: 0;
+  font-size: 1.25rem;
+  text-align: center;
+  width: 100%;
+  padding: 16px;
+  color: white;
+  background: $primary;
+}
