--- a/src/assets/stylesheets/custom/components/_card.scss
+++ b/src/assets/stylesheets/custom/components/_card.scss
@@ -76,4 +76,22 @@
       font-size: 1rem;
     }
   }
+  &-tag {
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    padding: 0px 4px;
+    border-radius: 50%;
+    background: $light;
+    @include media-breakpoint-up(sm) {
+      border-radius: 8px;
+      padding: 4px;
+      top: 8px;
+      left: 8px;
+      font-size: 0.75rem;
+    }
+    @include media-breakpoint-up(md) {
+      font-size: 1rem;
+    }
+  }
 }
