--- a/src/assets/stylesheets/custom/page/_index.scss
+++ b/src/assets/stylesheets/custom/page/_index.scss
@@ -8,238 +8,6 @@
   white-space: nowrap;
   font-size: 2.5rem;
 }
-.banner {
-  padding: 2rem 0;
-  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF1.png?raw=true);
-  background-image: -webkit-cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF1.png?raw=true), 90%); // 讓背景透明但上面的字不影響
-  background-image: cross-fade(url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==), url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF1.png?raw=true), 90%); // 讓背景透明但上面的字不影響
-  @include media-breakpoint-up(lg) {
-    height: 600px;
-    position: relative;
-  }
-  @include media-breakpoint-up(xl) {
-    height: 760px;
-  }
-  &-btn {
-    background-size: contain;
-    background-repeat: no-repeat;
-    @include media-breakpoint-up(sm) {
-      height: 150px;
-    }
-    @include media-breakpoint-up(lg) {
-      position: absolute;
-    }
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -webkit-transform: scale(1.1);
-    }
-  }
-  &-title {
-    font-weight: bold;
-    color: $light;
-    background: $primary;
-    border-radius: 0.5rem;
-    padding: 0.25rem 0.5rem;
-    text-align: center;
-    @include media-breakpoint-up(lg) {
-      position: absolute;
-    }
-  }
-  &-text {
-    color: $white;
-    @include media-breakpoint-up(lg) {
-      position: absolute;
-      top: 63%;
-      left: 31%;
-    }
-    @include media-breakpoint-up(xl) {
-      top: 65%;
-      left: 31%;
-    }
-  }
-}
-.banner-btn-city-tour,
-.banner-btn-tkt,
-.banner-btn-rent-car {
-  width: 140px;
-  height: 140px;
-  background-size: contain;
-  background-position: center;
-  @include media-breakpoint-up(md) {
-    width: 200px;
-    height: 200px;
-  }
-  @include media-breakpoint-up(lg) {
-    background-size: contain;
-    width: 280px;
-    height: 280px;
-  }
-  @include media-breakpoint-up(xl) {
-    width: 350px;
-    height: 350px;
-  }
-}
-.banner-btn-tpe,
-.banner-btn-txg,
-.banner-btn-tnn,
-.banner-btn-kao,
-.banner-btn-hun {
-  width: 140px;
-  height: 140px;
-  background-size: contain;
-  background-position: center;
-  @include media-breakpoint-up(lg) {
-    width: 150px;
-    height: 150px;
-  }
-  @include media-breakpoint-up(xl) {
-    width: 200px;
-    height: 200px;
-  }
-}
-.banner-btn {
-  &-city-tour {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E5%9F%8E%E5%B8%82%E5%B0%8E%E8%A6%BDicon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 32%;
-      left: 5%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        transform: rotate(-5deg);
-        -webkit-transform: rotate(-5deg);
-        -moz-transform: rotate(-5deg);
-        bottom: -5%;
-        left: 30%;
-      }
-    }
-  }
-  &-tkt {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E7%A5%A8%E5%88%B8%E9%AB%94%E9%A9%97%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 4%;
-      left: 41%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        bottom: -13%;
-        transform: rotate(5deg);
-        -webkit-transform: rotate(5deg);
-        -moz-transform: rotate(5deg);
-      }
-    }
-  }
-  &-rent-car {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E5%8C%85%E8%BB%8A%E6%9C%8D%E5%8B%99%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 27%;
-      left: 70%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        bottom: 2%;
-        right: -1%;
-        transform: rotate(-5deg);
-        -webkit-transform: rotate(-5deg);
-        -moz-transform: rotate(-5deg);
-      }
-    }
-  }
-  &-tpe {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E9%9B%99%E5%8C%97%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 7%;
-      left: 12%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        top: -10%;
-        transform: rotate(-5deg);
-        -webkit-transform: rotate(-5deg);
-        -moz-transform: rotate(-5deg);
-      }
-    }
-  }
-  &-txg {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E4%B8%AD%E9%83%A8%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 6%;
-      left: 70%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        top: 10%;
-        right: -20%;
-        transform: rotate(-5deg);
-        -webkit-transform: rotate(-5deg);
-        -moz-transform: rotate(-5deg);
-      }
-    }
-  }
-  &-tnn {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E5%8D%97%E9%83%A8%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 70%;
-      left: 72%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        display: block;
-        bottom: 10%;
-        left: -30%;
-        transform: rotate(5deg);
-        -webkit-transform: rotate(5deg);
-        -moz-transform: rotate(5deg);
-      }
-      @include media-breakpoint-up(xl) {
-        bottom: 10%;
-        left: -10%;
-      }
-    }
-  }
-  &-kao {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E9%AB%98%E5%B1%8F%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 26%;
-      left: 28%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        top: 60%;
-        left: 10%;
-        transform: rotate(5deg);
-        -webkit-transform: rotate(5deg);
-        -moz-transform: rotate(5deg);
-      }
-    }
-  }
-  &-hun {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%8A%B1%E6%9D%B1%20icon.png?raw=true);
-    @include media-breakpoint-up(lg) {
-      top: 60%;
-      left: 56%;
-    }
-    @include media-breakpoint-up(xl) {
-      top: 58%;
-      left: 55%;
-    }
-    &-title {
-      @include media-breakpoint-up(lg) {
-        top: 30%;
-        right: -10%;
-        transform: rotate(5deg);
-        -webkit-transform: rotate(5deg);
-        -moz-transform: rotate(5deg);
-      }
-      @include media-breakpoint-up(xl) {
-        top: 35%;
-        right: -10%;
-      }
-    }
-  }
-}
 .car {
   position: absolute;
   bottom: 0px;
@@ -268,6 +36,380 @@
   }
   100% {
     left: 0;
+    opacity: 0;
+  }
+}
+.banner-outer {
+  position: relative;
+  background: $light;
+  padding-bottom: 100%;
+  @include media-breakpoint-up(sm) {
+    padding-bottom: 85%;
+  }
+  @include media-breakpoint-up(md) {
+    padding-bottom: 60%;
+  }
+  @include media-breakpoint-up(lg) {
+    padding-bottom: 45%;
+  }
+}
+.banner {
+  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%83%8C%E6%99%AF.png?raw=true);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: 180%;
+  background-position: right bottom;
+  position: absolute;
+  @include media-breakpoint-up(sm) {
+    background-size: 160%;
+  }
+  @include media-breakpoint-up(md) {
+    background-size: contain;
+  }
+  &-title {
+    position: absolute;
+    top: 10%;
+    z-index: 2;
+    font-weight: bold;
+    font-size: $h2-font-size;
+    color: $primary;
+    width: 100%;
+    text-align: center;
+    @include media-breakpoint-up(sm) {
+      font-size: $h1-font-size;
+      left: 5%;
+      width: auto;
+    }
+    @include media-breakpoint-up(md) {
+      top: 20%;
+    }
+    @include media-breakpoint-up(lg) {
+      top: 50%;
+      transform: translate(0, -50%);
+    }
+  }
+  &-text,
+  &-subtitle {
+    position: absolute;
+    z-index: 2;
+    border-radius: 50%;
+    background: $white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &-subtitle {
+    top: 25%;
+    left: 8%;
+    padding: 22px 5px;
+    @include media-breakpoint-up(sm) {
+      padding: 30px 10px;
+      top: 28%;
+      left: 5%;
+    }
+    @include media-breakpoint-up(md) {
+      top: 4%;
+      left: 52%;
+    }
+    @include media-breakpoint-up(lg) {
+      top: 8%;
+      left: 40%;
+    }
+  }
+  &-text {
+    top: 36%;
+    left: 12%;
+    padding: 31px 11px;
+    @include media-breakpoint-up(sm) {
+      padding: 50px 24px;
+      top: 30%;
+      left: 17%;
+    }
+    @include media-breakpoint-up(md) {
+      top: 12%;
+      left: 60%;
+    }
+    @include media-breakpoint-up(lg) {
+      top: 16%;
+      left: 43%;
+    }
+  }
+  &-icon {
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    background-position: center;
+    width: 15%;
+    height: 15%;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &-tpe,
+  &-tnn,
+  &-kao,
+  &-tkt {
+    animation-name: rotate;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+  }
+  &-tpe {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%9B%99%E5%8C%97.png?raw=true);
+    right: 41%;
+    bottom: 5%;
+    @include media-breakpoint-up(sm) {
+      right: 35%;
+      bottom: 5%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 20%;
+      bottom: 4%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 17%;
+      bottom: 5%;
+    }
+  }
+  &-tnn {
+    width: 10%;
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%98%89%E5%8D%97.png?raw=true);
+    right: 7.3%;
+    bottom: 20.8%;
+    @include media-breakpoint-up(sm) {
+      right: 6.2%;
+      bottom: 22%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 2%;
+      bottom: 19%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 1.3%;
+      bottom: 23.3%;
+    }
+  }
+  &-kao {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%AB%98%E5%B1%8F.png?raw=true);
+    width: 5%;
+    right: 90%;
+    bottom: 20%;
+    @include media-breakpoint-up(sm) {
+      right: 80%;
+      bottom: 21%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 49%;
+      bottom: 20%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 44%;
+      bottom: 24%;
+    }
+  }
+  &-hun {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%8A%B1%E6%9D%B1.png?raw=true);
+    right: 58%;
+    bottom: 8%;
+    animation-name: hun;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    @include media-breakpoint-up(sm) {
+      right: 50%;
+      bottom: 8%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 30%;
+      bottom: 6.5%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 28%;
+      bottom: 9.285%;
+    }
+  }
+  &-tkt {
+    width: 10%;
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%AB%94%E9%A9%97.png?raw=true);
+    right: 5%;
+    bottom: 0%;
+    animation-duration: 3s;
+    @include media-breakpoint-up(sm) {
+      right: 4%;
+      bottom: 0%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 1%;
+      bottom: 0%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 1%;
+      bottom: 2.14%;
+    }
+  }
+  &-car {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%8C%85%E8%BB%8A.png?raw=true);
+    right: 25%;
+    bottom: 32%;
+    animation-name: rentCar;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    @include media-breakpoint-up(sm) {
+      right: 20%;
+      bottom: 34%;
+    }
+    @include media-breakpoint-up(md) {
+      right: 13%;
+      bottom: 29%;
+      width: 10%;
+    }
+    @include media-breakpoint-up(lg) {
+      right: 12%;
+      bottom: 35.71%;
+    }
+  }
+  &-sky-lantern {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%A4%A9%E7%87%88.png?raw=true);
+    right: 5%;
+    bottom: 57.14%;
+    animation-name: skyLantern;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+  }
+  &-footprint1,
+  &-footprint2,
+  &-footprint3 {
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    &:hover {
+      cursor: auto;
+    }
+  }
+  &-footprint1 {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B01.png?raw=true);
+    width: 5%;
+    height: 5%;
+    left: 5%;
+    bottom: 13%;
+    animation-name: footprint1;
+    @include media-breakpoint-up(sm) {
+      left: 1%;
+      bottom: 20%;
+    }
+    @include media-breakpoint-up(md) {
+      left: 10.71%;
+      bottom: 48%;
+    }
+    @include media-breakpoint-up(lg) {
+      left: 10.71%;
+      bottom: 28.57%;
+    }
+  }
+  &-footprint2 {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B02.png?raw=true);
+    width: 6%;
+    height: 6%;
+    left: 8%;
+    bottom: 5%;
+    animation-name: footprint2;
+    @include media-breakpoint-up(sm) {
+      left: 3%;
+      bottom: 9%;
+    }
+    @include media-breakpoint-up(md) {
+      left: 12.85%;
+      bottom: 30%;
+    }
+    @include media-breakpoint-up(lg) {
+      left: 12.85%;
+      bottom: 14.28%;
+    }
+  }
+  &-footprint3 {
+    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B03.png?raw=true);
+    width: 6%;
+    height: 6%;
+    left: 5%;
+    bottom: -2.857%;
+    animation-name: footprint3;
+    @include media-breakpoint-up(sm) {
+      left: 1%;
+    }
+    @include media-breakpoint-up(md) {
+      left: 7.14%;
+      bottom: 10%;
+    }
+    @include media-breakpoint-up(lg) {
+      left: 7.14%;
+      bottom: -2.857%;
+    }
+  }
+}
+@keyframes hun {
+  0% {
+    transform: translateX(0%) rotate(20deg);
+  }
+  25% {
+    transform: translateX(5%) rotate(12deg);
+  }
+  50% {
+    transform: translateX(0%) rotate(20deg);
+  }
+  75% {
+    transform: translateX(-5%) rotate(12deg);
+  }
+  100% {
+    transform: translateX(0%) rotate(20deg);
+  }
+}
+@keyframes rotate {
+  50% {
+    transform: rotate(2deg);
+  }
+}
+@keyframes rentCar {
+  0% {
+    transform: translateX(0%);
+  }
+  50% {
+    transform: translateX(-25%) rotate(3deg);
+  }
+}
+@keyframes skyLantern {
+  50% {
+    bottom: 61.42%;
+  }
+}
+@keyframes footprint1 {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes footprint2 {
+  0% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes footprint3 {
+  0% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
     opacity: 0;
   }
 }
