第二次修改：購物車確認訂單頁調整排版、規範客人數量資料、未填寫資料跳警告視窗並標紅色、調整  變數顏色、 navbar 購物車數量顏色調成白色

--- a/src/assets/stylesheets/custom/components/_nav.scss
+++ b/src/assets/stylesheets/custom/components/_nav.scss
@@ -7,4 +7,18 @@
   @include media-breakpoint-up(md) {
     padding: 0.5rem 1rem;
   }
+  &-outline-primary {
+    color: $primary;
+  }
+  &-danger {
+    background: $danger;
+    color: $dark;
+  }
+}
+.nav-pills .nav-link-outline-primary {
+  border: 1px solid $primary;
+}
+.nav-pills .nav-link-danger {
+  background: $danger;
+  border: 1px solid $danger;
 }
