--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -72,7 +72,7 @@ $secondary: #2771a3 !default;
 $success: #a0d9a7 !default;
 $info: $cyan !default;
 $warning: #fdd68a !default;
-$danger: #f7b4b4 !default;
+$danger: #f57979 !default;
 $light: #f5fafd !default;
 $dark: $gray-900 !default;
 $gray: #b4b4b4 !default;
@@ -381,7 +381,7 @@ $border-widths: (
     4: 3px,
   // 4px,
     5: 4px,
-  // 5px,,,,,,,,,,,,,,,,,,,,,,
+  // 5px,,,,,,,,,,,,,,,,,,,,,,,
 ) !default;
 
 $border-color: $gray-300 !default;
