--- a/src/assets/stylesheets/custom/components/_alert.scss
+++ b/src/assets/stylesheets/custom/components/_alert.scss
@@ -1,8 +1,9 @@
 .alert {
-  position: absolute;
+  position: fixed;
   z-index: $zindex-tooltip;
   top: 100px;
   left: 50%;
   transition: -50%;
   transform: translate(-50%);
+  text-align: center;
 }
