--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -21,12 +21,54 @@
     width: 100px;
   }
 }
+.delete-pax-num {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 18px;
+  color: $dark;
+  background: $danger;
+  padding: 0px 4px;
+  border-radius: 50%;
+  border: none;
+  opacity: 0.2;
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
+}
+.cart-scroll-box {
+  height: 750px; //限定高度
+  overflow-y: auto; //自動產生 y 軸捲軸
+}
+.scroll-btn {
+  display: inline;
+  position: sticky;
+  bottom: 0%;
+  left: 100%;
+  background: $secondary;
+  color: $light;
+  font-size: $h3-font-size;
+  padding: 0 0.25rem;
+  border-radius: 50%;
+  animation-name: scroll-btn;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+@keyframes scroll-btn {
+  50% {
+    bottom: 1%;
+  }
+  100% {
+    bottom: 0%;
+  }
+}
 .cart-num {
   position: absolute;
   padding: 4px 8px;
   border-radius: 50%;
   background: $danger;
-  color: $black;
+  color: $white;
   text-align: center;
   font-size: 0.75rem;
   font-weight: bold;
@@ -41,7 +83,13 @@
     left: 25px;
   }
 }
-
+.warning-icon {
+  position: absolute;
+  font-size: 1.5rem;
+  top: -30%;
+  right: -10%;
+  color: $gray-dark;
+}
 .cart-img {
   width: 50px;
   height: 50px;
