--- a/src/assets/stylesheets/custom/components/_card.scss
+++ b/src/assets/stylesheets/custom/components/_card.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    @include media-breakpoint-up(xl) {
+    @include media-breakpoint-up(lg) {
       padding: 1.5rem;
     }
   }
