--- a/src/assets/stylesheets/custom/utils/_sizing.scss
+++ b/src/assets/stylesheets/custom/utils/_sizing.scss
@@ -1,3 +1,8 @@
+.w-sm-50 {
+  @include media-breakpoint-up(sm) {
+    width: 50%;
+  }
+}
 .w-md-50 {
   @include media-breakpoint-up(md) {
     width: 50%;
