第二次修改：調整 footer 手機版字型大小、隨機產品區塊手機版調成 overflow: scroll 、彈跳視窗調到畫面中間、選擇方案區塊改成將選擇日期跟人數放在彈跳視窗（希望更直覺化）

--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -3,8 +3,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import './helpers/reboot';
 
-@import '~swiper/swiper.scss'; // Import Swiper styles
-@import '~swiper/components/navigation/navigation'; // Import Swiper navigation styles
+@import '~swiper/swiper.scss';
+@import '~swiper/components/navigation/navigation';
 @import 'swiper/components/thumbs/thumbs';
 
 @import '~vue-slider-component/theme/default';
