--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -381,7 +381,7 @@ $border-widths: (
     4: 3px,
   // 4px,
     5: 4px,
-  // 5px,,,,,,,,,,,,,,,,,,,,,,,,
+  // 5px,,,,,,,,,,,,,,,,,,,,,,,,,
 ) !default;
 
 $border-color: $gray-300 !default;
@@ -1460,7 +1460,7 @@ $btn-close-white-filter: invert(1) grayscale(100%) brightness(200%) !default;
 $offcanvas-padding-y: $modal-inner-padding !default;
 $offcanvas-padding-x: $modal-inner-padding !default;
 $offcanvas-horizontal-width: 400px !default;
-$offcanvas-vertical-height: 30vh !default;
+$offcanvas-vertical-height: 50vh !default;
 $offcanvas-transition-duration: 0.3s !default;
 $offcanvas-border-color: $modal-content-border-color !default;
 $offcanvas-border-width: $modal-content-border-width !default;
