第二次修改：更改搜尋欄貓咪及纜車配色、調整 logo、方案細項 modal 新增按鈕可跳到加入購物車畫面

--- a/src/assets/stylesheets/custom/components/_searchBox.scss
+++ b/src/assets/stylesheets/custom/components/_searchBox.scss
@@ -9,7 +9,7 @@
   &-body {
     border-radius: inherit;
     @include media-breakpoint-up(lg) {
-      border-top: 3px solid #9a5836;
+      border-top: 3px solid $secondary;
       background: $white;
       padding: 2rem 1.5rem;
     }
