第二次修改：購物車查看頁新增聯絡資料跟主要聯絡人相同的選項、刪客人時 tab 會往前跳一位、可點擊商品進入商品頁面、購物車確認頁版型調整、deleteTab + scrollBtnStatus ＋productMaxPaxQty＋totalProductsMaxPaxQty 改放到 cart.vue 、刪掉 alert 相關重複程式碼

--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -38,7 +38,7 @@
   }
 }
 .cart-scroll-box {
-  height: 750px; //限定高度
+  height: 550px; //限定高度
   overflow-y: auto; //自動產生 y 軸捲軸
 }
 .scroll-btn {
@@ -165,4 +165,20 @@
     bottom: 10px;
     right: 10px;
   }
+}
+
+.payment-box {
+  display: block;
+  background: $white;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0.5rem;
+  border: 1px solid $white;
+  &:hover {
+    cursor: pointer;
+    border: 1px solid $primary;
+  }
+}
+.payment-box.active {
+  border: 1px solid $primary;
 }
