第二次修改：購物車查看及確認頁 rwd

--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -38,11 +38,23 @@
   }
 }
 .cart-scroll-box {
-  height: 550px; //限定高度
-  overflow-y: auto; //自動產生 y 軸捲軸
+  overflow-x: scroll;
+  overflow-y: auto;
+  @include media-breakpoint-up(lg) {
+    height: 550px; //限定高度
+    overflow-x: hidden;
+    overflow-y: auto; //自動產生 y 軸捲軸
+  }
+  &-item {
+    min-width: 90%;
+    width: 90%;
+    @include media-breakpoint-up(sm) {
+      min-width: 100%;
+      width: 100%;
+    }
+  }
 }
 .scroll-btn {
-  display: inline;
   position: sticky;
   bottom: 0%;
   left: 100%;
@@ -91,8 +103,8 @@
   color: $gray-dark;
 }
 .cart-img {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   object-fit: cover;
   border-radius: 0.5rem;
   @include media-breakpoint-up(sm) {
