--- a/src/assets/stylesheets/custom/components/_nav.scss
+++ b/src/assets/stylesheets/custom/components/_nav.scss
@@ -15,6 +15,9 @@
     color: $dark;
   }
 }
+.nav-pills > .nav-item > .nav-link {
+  padding: 0.5rem 1rem;
+}
 .nav-pills .nav-link-outline-primary {
   border: 1px solid $primary;
 }
