--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -54,6 +54,14 @@
     }
   }
 }
+.order-scroll-box {
+  overflow-x: scroll;
+  overflow-y: auto;
+  &-item {
+    min-width: 90%;
+    width: 90%;
+  }
+}
 .scroll-btn {
   position: sticky;
   bottom: 0%;
@@ -105,6 +113,16 @@
 .cart-img {
   width: 80px;
   height: 80px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  @include media-breakpoint-up(sm) {
+    width: 100px;
+    height: 100px;
+  }
+}
+.order-img {
+  width: 40px;
+  height: 40px;
   object-fit: cover;
   border-radius: 0.5rem;
   @include media-breakpoint-up(sm) {
